src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>bizible__Ad_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Group (FT)</label>
        <referenceTo>bizible__Ad_Group__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__City__c</fullName>
        <label>Bizible City (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Country__c</fullName>
        <label>Bizible Country (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Attribution</label>
        <referenceTo>bizible__Bizible_Data__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Device__c</fullName>
        <label>Bizible Device (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Keyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Keyword (FT)</label>
        <referenceTo>bizible__Keyword__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__LandingPage__c</fullName>
        <description>Bizible Landing Page</description>
        <label>Bizible Landing Page (FT)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Medium__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Medium (FT)</label>
        <referenceTo>bizible__Medium__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__ReferrerPage__c</fullName>
        <description>Bizible Referrer Page</description>
        <label>Bizible Referrer Page (FT)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Region__c</fullName>
        <label>Bizible Region (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Search_Phrase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Search Phrase (FT)</label>
        <referenceTo>bizible__Search_Phrase__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Text_Ad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Content (FT)</label>
        <referenceTo>bizible__Text_Ad__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__WebSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible WebSource (FT)</label>
        <referenceTo>bizible__WebSource__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Case_Type__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>Assigned_to__c</columns>
        <columns>Team_Affected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Backlog,Closed</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpsOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Category__c</columns>
        <columns>State__c</columns>
        <columns>Component__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Ops Open Cases</label>
        <queue>Case_SalesOps_Queue</queue>
    </listViews>
    <listViews>
        <fullName>AllSupportOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Category__c</columns>
        <columns>State__c</columns>
        <columns>Component__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,On Hold,Solution Approved,2L Enhancement</value>
        </filters>
        <label>All Support Open Cases</label>
        <queue>Case_Apps_Support_Queue</queue>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_Investigate_Only</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Category__c</columns>
        <columns>State__c</columns>
        <columns>Component__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>notEqual</operation>
            <value>Implement,Verify,Resolved</value>
        </filters>
        <label>All Open Cases-Investigate Only</label>
    </listViews>
    <listViews>
        <fullName>Case_Apps_Support_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Case Apps Support Queue</label>
        <queue>Case_Apps_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_Operations_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Case_App_Support</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Case Apps Support Queue,Ops Support Queue</value>
        </filters>
        <label>Ops Open Support Queue</label>
    </listViews>
    <listViews>
        <fullName>Cases_by_urgency_after_September_1_2011</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>State__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>greaterThan</operation>
            <value>8/31/2011 12:00 AM</value>
        </filters>
        <label>Cases by urgency after September 1, 2011</label>
    </listViews>
    <listViews>
        <fullName>Feature_Requests_from_Cases</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>State__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Feature Request</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Feature Requests from Cases</label>
    </listViews>
    <listViews>
        <fullName>Internal_Salesforce_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Assigned_to__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>Team_Affected__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>New_User_Name__c</columns>
        <columns>New_User_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Case_App_Support,Case.Case_Implementation_Service</value>
        </filters>
        <label>Internal Salesforce Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_Cases_By_Urgency1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>State__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Cases - By Urgency</label>
    </listViews>
    <listViews>
        <fullName>Open_Cases_Investigate_ONLY1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>State__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>notEqual</operation>
            <value>Implement,Verify,Resolved</value>
        </filters>
        <label>Open Cases - Investigate ONLY</label>
    </listViews>
    <listViews>
        <fullName>Open_Cases_Investigate_ONLY_0_Urgency</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>State__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>notEqual</operation>
            <value>Implement,Verify,Resolved</value>
        </filters>
        <label>Open Cases - Investigate ONLY- 0 Urgency</label>
    </listViews>
    <listViews>
        <fullName>Open_Cases_Investigate_ONLY_after92011</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>State__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>notEqual</operation>
            <value>Implement,Verify,Resolved</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>greaterThan</operation>
            <value>8/31/2011 12:00 AM</value>
        </filters>
        <label>Open Cases - Investigate ONLY after92011</label>
    </listViews>
    <recordTypes>
        <fullName>Case_App_Support</fullName>
        <active>true</active>
        <businessProcess>Case App Support</businessProcess>
        <description>Application Support for internal Users</description>
        <label>Ops App Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Implementation_Service</fullName>
        <active>true</active>
        <businessProcess>Case Implementation Service</businessProcess>
        <label>Case Implementation Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_default</fullName>
        <active>true</active>
        <businessProcess>Case default</businessProcess>
        <label>Case default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>